stop project card box shadows from being cropped

--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ button {
   overflow: scroll;
   gap: 20px;
   height: fit-content;
+  overflow: visible;
 }
 
 .project {
